Test stability, logging and code style
This patch includes:
* multiple minor tests stability improvements ie. by adding time outs for async calls.
* for better debugging proper logging is enabled while invoking unit tests
* multiple minor code style improvements suggested by static code
  analyzers

Change-Id: I899c962aaec4ea3ad258b88ff557dd2b3514766a
Signed-off-by: Artur Socha <asocha@redhat.com>